--- a/style.css
+++ b/style.css
@@ -35,7 +35,79 @@ footer {
     background-color: #fff;
 }
 
-i {
+/* i {
     color: #fff;
+} */
+
+.section {
+    background-color: silver;
+    padding: 100px 0px;
+}
+
+.section-a {
+    background-color: rgba(255, 255, 255, 0.466);
+    padding: 100px 0px;
+}
+
+footer {
+    background-color: #212529;
+}
+
+:root {
+    --color1: #ffc107;
+    --color2: #198754;
+    --color3: #0d6efd;
+
+}
+
+.btn-footer {
+    background-color:var(--color1);
+    
+}
+
+.forwhom i {
+    font-size: 25px;
+}
+
+.kt-icon {
+    margin: 0 auto 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border: 3px solid black;
+    border-radius: 50%;
+    background-color: var(--color1);
+}
+
+.raspisanie i {
+    font-size: 15px;
+    padding-right: 5px;
+}
+
+.r-icon {
+    color: var(--color2);
+    
+}
+
+.line {
+    width: 100px;
+    height: 3px;
+    background-color: var(--color2);
+    margin: 15px auto 30px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+a {
+    color: #212529;
+}
+
+a:hover {
+    color: var(--color2);
 }
 
