--- a/fontello-de9a3836/css/fontello-codes.css
+++ b/fontello-de9a3836/css/fontello-codes.css
@@ -1,58 +1,3 @@
-@font-face {
-  font-family: 'fontello';
-  src: url('../font/fontello.eot?80868364');
-  src: url('../font/fontello.eot?80868364#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?80868364') format('woff2'),
-       url('../font/fontello.woff?80868364') format('woff'),
-       url('../font/fontello.ttf?80868364') format('truetype'),
-       url('../font/fontello.svg?80868364#fontello') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-/*
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'fontello';
-    src: url('../font/fontello.svg?80868364#fontello') format('svg');
-  }
-}
-*/
-[class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "fontello";
-  font-style: normal;
-  font-weight: normal;
-  speak: never;
-
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  /* opacity: .8; */
-
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
-
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
-
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
-
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
-
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-}
 
 .icon-ok:before { content: '\e800'; } /* '' */
 .icon-plus:before { content: '\e801'; } /* '' */
@@ -89,18 +34,35 @@
 .icon-umbrella:before { content: '\e820'; } /* '' */
 .icon-tint:before { content: '\e821'; } /* '' */
 .icon-credit-card:before { content: '\e822'; } /* '' */
+.icon-instagram:before { content: '\e823'; } /* '' */
+.icon-search:before { content: '\e824'; } /* '' */
+.icon-plus-1:before { content: '\e825'; } /* '' */
+.icon-minus:before { content: '\e826'; } /* '' */
+.icon-folder-open:before { content: '\e827'; } /* '' */
+.icon-cog:before { content: '\e828'; } /* '' */
+.icon-volume-up:before { content: '\e829'; } /* '' */
+.icon-heart-1:before { content: '\e82a'; } /* '' */
+.icon-star-1:before { content: '\e82b'; } /* '' */
+.icon-spin3:before { content: '\e832'; } /* '' */
+.icon-spin5:before { content: '\e838'; } /* '' */
+.icon-spin6:before { content: '\e839'; } /* '' */
 .icon-gplus:before { content: '\f0d5'; } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-comment-empty:before { content: '\f0e5'; } /* '' */
+.icon-suitcase:before { content: '\f0f2'; } /* '' */
 .icon-food:before { content: '\f0f5'; } /* '' */
 .icon-reply:before { content: '\f112'; } /* '' */
+.icon-mic:before { content: '\f130'; } /* '' */
 .icon-angle-circled-left:before { content: '\f137'; } /* '' */
 .icon-angle-circled-right:before { content: '\f138'; } /* '' */
 .icon-angle-circled-up:before { content: '\f139'; } /* '' */
 .icon-angle-circled-down:before { content: '\f13a'; } /* '' */
+.icon-ellipsis-vert:before { content: '\f142'; } /* '' */
 .icon-thumbs-up-alt:before { content: '\f164'; } /* '' */
 .icon-thumbs-down-alt:before { content: '\f165'; } /* '' */
 .icon-youtube-play:before { content: '\f16a'; } /* '' */
+.icon-female:before { content: '\f182'; } /* '' */
+.icon-male:before { content: '\f183'; } /* '' */
 .icon-sun:before { content: '\f185'; } /* '' */
 .icon-moon:before { content: '\f186'; } /* '' */
 .icon-vkontakte:before { content: '\f189'; } /* '' */
@@ -108,9 +70,11 @@
 .icon-tree:before { content: '\f1bb'; } /* '' */
 .icon-paper-plane:before { content: '\f1d8'; } /* '' */
 .icon-share:before { content: '\f1e0'; } /* '' */
+.icon-trash:before { content: '\f1f8'; } /* '' */
 .icon-copyright:before { content: '\f1f9'; } /* '' */
 .icon-bus:before { content: '\f207'; } /* '' */
 .icon-whatsapp:before { content: '\f232'; } /* '' */
+.icon-user-plus:before { content: '\f234'; } /* '' */
 .icon-subway:before { content: '\f239'; } /* '' */
 .icon-calendar-plus-o:before { content: '\f271'; } /* '' */
 .icon-map-signs:before { content: '\f277'; } /* '' */
@@ -123,4 +87,8 @@
 .icon-user-circle:before { content: '\f2bd'; } /* '' */
 .icon-thermometer:before { content: '\f2c7'; } /* '' */
 .icon-snowflake-o:before { content: '\f2dc'; } /* '' */
+.icon-yandex:before { content: '\f305'; } /* '' */
+.icon-yandex-rect:before { content: '\f306'; } /* '' */
 .icon-facebook-squared:before { content: '\f308'; } /* '' */
+.icon-gplus-circled:before { content: '\f310'; } /* '' */
+.icon-instagram-1:before { content: '\f32d'; } /* '' */
